# sphinx-test

./: README.md  main.py  pyproject.toml
.github/workflows/: deploy_to_github_pages.yml
Module_folder/: my_library.py
Module_folder/sphinx_test.egg-info/: PKG-INFO  SOURCES.txt
doc/: .buildinfo  Module_folder.html  genindex.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/.doctrees/: Module_folder.doctree  environment.pickle  index.doctree  main.doctree  modules.doctree
doc/_sources/: index.rst.txt  modules.rst.txt
source/: Module_folder.rst  conf.py
