[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-test"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser"
]
license = {file = "LICENSE"}
readme = "README.md"
description = "A test project for Sphinx documentation"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["sphinx", "documentation"]

[project.urls]
Homepage = "https://yourhomepage.com/"
Documentation = "https://yourdocumentation.com/"
Repository = "https://github.com/yourusername/sphinx-test"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["Module_folder"]

